[gd_scene load_steps=10 format=2]

[ext_resource path="res://Beings/matt_pixel_frames.png" type="Texture" id=1]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Beings/HelperMan.gd" type="Script" id=3]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.21911
height = 3.28291

[sub_resource type="CircleShape2D" id=2]
radius = 29.7866

[sub_resource type="Animation" id=3]
resource_name = "RunDown"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "WaveHand"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 7, 9, 10, 11, 11, 11 ]
}

[sub_resource type="Animation" id=5]
resource_name = "WaveHandReverse"

[node name="HelperMan" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.138258, -0.414774 )
scale = Vector2( 0.616582, 0.625223 )
texture = ExtResource( 1 )
hframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.542657, 5.31588 )
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]
position = Vector2( -1.08863, 5.48314 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
visible = false
position = Vector2( 1.80634, 11.4958 )
shape = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RunDown = SubResource( 3 )
anims/WaveHand = SubResource( 4 )
anims/WaveHandReverse = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="player_gone" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_player_gone"]
[connection signal="player_near" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_player_near"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="PlayerDetectionZone"]
